--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "devDependencies": {
     "grunt": "^1.5.3",
     "grunt-browser-sync": "^2.2.0",
-    "grunt-contrib-watch": "^1.1.0"
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-sass": "^2.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-xsltproc": "^1.0.0"
   }
 }
